Updated index.html file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header id="header">
       <div class="container">
         <h1><a href="index.html"></a>Siva Prakash</h1>
-        <h2>I'm an <span>Software Enginner</span> from Chennai</h2>
+        <h2>I'm an <span>Data Enginner</span> from Chennai</h2>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -111,15 +111,15 @@
             />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Software Engineer</h3>
+            <h3>Data Engineer</h3>
             <p>
-              I am Siva Prakash, a motivated professional with a Master of
-              Computer Applications. I specialize in developing both frontend
-              and backend applications, as well as creating data-driven
-              solutions. With 6 months of experience in the IT industry and over
-              2 years of tutoring experience, I am eager to leverage my skills
-              and expertise to contribute effectively in a dynamic work
-              environment.
+              I am Siva Prakash, I am a self-motivated professional holding a
+              Master of Computer Applications. With a strong focus on developing
+              data-driven applications, I have cultivated expertise in software
+              engineering. Currently, my work spans projects encompassing both
+              machine learning and data engineering domains. I am eager to apply
+              my skills and experience to deliver impactful contributions within
+              a dynamic and challenging work environment.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -198,7 +198,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Typescript <i class="val">90%</i></span>
+              <span class="skill">PostgreSQL <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -211,7 +211,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">PostgreSQL <i class="val">85%</i></span>
+              <span class="skill">MongoDB <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -224,7 +224,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MongoDB <i class="val">80%</i></span>
+              <span class="skill">Neo4J <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -237,7 +237,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">C++<i class="val">80%</i></span>
+              <span class="skill">Java<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -265,7 +265,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Git <i class="val">75%</i></span>
+              <span class="skill">Microsoft Azure <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -278,7 +278,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">FastAPI <i class="val">70%</i></span>
+              <span class="skill">Apache Spark <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -291,7 +291,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Spark<i class="val">65%</i></span>
+              <span class="skill">Apache Kafka<i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -304,7 +304,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Kafka <i class="val">60%</i></span>
+              <span class="skill">Apache Flink <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -444,8 +444,8 @@
               <h4>Siva Prakash</h4>
               <p>
                 <em
-                  >Software Engineer with 6 months of experience in the IT
-                  industry and over 2 years of tutoring experience</em
+                  >Data Engineer with 6 months of experience in the IT industry
+                  and over 2 years of tutoring experience</em
                 >
               </p>
               <ul>
@@ -486,29 +486,10 @@
               <p>Google Cloud Machine Learning Specialization - Coursera</p>
             </div>
             <div class="resume-item">
-              <p>Python Intermediate Certification - Hackerrank</p>
+              <p>Neo4J Certified Professional - Neo4J</p>
             </div>
             <div class="resume-item">
-              <p>SQL Intermediate Certification - Hackerrank</p>
-            </div>
-            <h3 class="resume-title">Achievements</h3>
-            <div class="resume-item">
-              <p>30 Days of Pandas Badge - Leetcode</p>
-            </div>
-            <div class="resume-item">
-              <p>Leetcode 75 - Leetcode</p>
-            </div>
-            <div class="resume-item">
-              <p>100 Days of Code - Leetcode</p>
-            </div>
-            <div class="resume-item">
-              <p>DSA I & II Badges - Leetcode</p>
-            </div>
-            <div class="resume-item">
-              <p>Programming I & II Badges - Leetcode</p>
-            </div>
-            <div class="resume-item">
-              <p>SQL I & II Badges - Leetcode</p>
+              <p>Postman Engineer Roadmap - Postman</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -549,33 +530,6 @@
                 <li>
                   Provided personalized tutoring to students from diverse
                   academic backgrounds and multiple colleges, enhancing their
-                  understanding of Java programming with Spring Boot, JDBC,
-                  Hibernate, PostgreSQL, and Swagger for backend development.
-                </li>
-                <li>
-                  Organized interactive group discussions and collaborative
-                  problem-solving sessions among students, fostering an engaging
-                  learning environment focused on practical application in
-                  backend development.
-                </li>
-                <li>
-                  Stayed updated with the latest trends in Java, Spring Boot,
-                  JDBC, Hibernate, and Swagger development to deliver
-                  cutting-edge insights and guidance to students, preparing them
-                  for real-world applications in web development.
-                </li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Backend Trainer</h4>
-              <h5>Feb 2023 - Apr 2023</h5>
-              <h5>Full Time</h5>
-              <h5>In Person</h5>
-              <p><em>FiiT, Chennai</em></p>
-              <ul>
-                <li>
-                  Provided personalized tutoring to students from diverse
-                  academic backgrounds and multiple colleges, enhancing their
                   understanding of Python programming with Django and FastAPI
                   for backend development.
                 </li>
@@ -594,11 +548,11 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Python Trainer</h4>
-              <h5>Sep 2022 - Jan 2023</h5>
-              <h5>Part Time</h5>
-              <h5>Online</h5>
-              <p><em>Careergrowth360, Coimbatore</em></p>
+              <h4>Backend Trainer</h4>
+              <h5>Dec 2022 - Sep 2023</h5>
+              <h5>Full Time</h5>
+              <h5>In Person</h5>
+              <p><em>FiiT, Chennai</em></p>
               <ul>
                 <li>
                   Provided personalized tutoring to students from diverse
@@ -636,11 +590,10 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4>System Optimization</h4>
+              <h4>Data Pipeline Optimization</h4>
               <p>
-                Improving system performance through efficient code optimization
-                and resource management, ensuring optimal application
-                responsiveness.
+                Enhancing the efficiency and performance of data pipelines by
+                optimizing data processing workflows and resource management.
               </p>
             </div>
           </div>
@@ -648,11 +601,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4>Data Integrity</h4>
+              <h4>Data Quality Management</h4>
               <p>
-                Ensuring data accuracy and reliability within databases and
-                applications, implementing rigorous data validation and error
-                handling mechanisms.
+                Ensuring the accuracy, consistency, and reliability of data
+                through rigorous validation, cleansing, and enrichment
+                processes.
               </p>
             </div>
           </div>
@@ -660,11 +613,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4>Backend Development</h4>
+              <h4>Data Warehousing</h4>
               <p>
-                Designing and developing scalable backend architectures using
-                technologies like Spring Boot, Hibernate, and JDBC for robust
-                data management and application logic implementation.
+                Designing and implementing scalable data warehousing solutions
+                for efficient storage, retrieval, and analysis of large
+                datasets.
               </p>
             </div>
           </div>
@@ -674,11 +627,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4>API Development</h4>
+              <h4>ETL Development</h4>
               <p>
-                Building and maintaining RESTful APIs to facilitate seamless
-                integration and communication between different software
-                components, ensuring interoperability and scalability.
+                Building and maintaining Extract, Transform, Load (ETL)
+                processes to facilitate data integration from various sources
+                into unified datasets.
               </p>
             </div>
           </div>
@@ -686,11 +639,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4>Application Security</h4>
+              <h4>Data Security</h4>
               <p>
-                Implementing robust security measures and best practices to
-                protect applications and sensitive data, ensuring compliance
-                with industry standards and regulations.
+                Implementing security measures to protect data from unauthorized
+                access and breaches, ensuring compliance with data protection
+                regulations.
               </p>
             </div>
           </div>
@@ -698,17 +651,18 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-link"></i></div>
-              <h4>Microservices Architecture</h4>
+              <h4>Big Data Solutions</h4>
               <p>
-                Designing and developing scalable microservices architectures
-                using technologies like GraphQL and gRPC, enabling modular and
-                flexible application development.
+                Designing and developing big data architectures and solutions
+                using technologies like Hadoop and Spark to handle large-scale
+                data processing.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
