Updated x link, resume section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header id="header">
       <div class="container">
         <h1><a href="index.html"></a>Siva Prakash</h1>
-        <h2>I'm an <span>Data Enginner</span> from Chennai</h2>
+        <h2>I'm an <span>Software Enginner</span> from Chennai</h2>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -59,10 +59,7 @@
         <!-- .navbar -->
 
         <div class="social-links">
-          <a
-            href="https://twitter.com/Prakashdev03"
-            class="twitter"
-            target="_blank"
+          <a href="https://x.com/prakashanalyst" class="twitter" target="_blank"
             ><i class="bi bi-twitter"></i
           ></a>
           <a
@@ -113,13 +110,13 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Engineer</h3>
             <p>
-              I am Siva Prakash, I am a self-motivated professional holding a
-              Master of Computer Applications. With a strong focus on developing
-              data-driven applications, I have cultivated expertise in software
-              engineering. Currently, my work spans projects encompassing both
-              machine learning and data engineering domains. I am eager to apply
-              my skills and experience to deliver impactful contributions within
-              a dynamic and challenging work environment.
+              I am a self-motivated professional holding a Master of Computer
+              Applications. With a strong foundation in software engineering, I
+              specialize in building scalable and efficient applications. My
+              experience spans backend development, system design, and working
+              with various technologies to create robust software solutions. I
+              am eager to apply my skills and expertise to solve complex
+              challenges in a dynamic and fast-paced work environment.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -142,7 +139,7 @@
                 <ul>
                   <li>
                     <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                    <span>22</span>
+                    <span>23</span>
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i>
@@ -211,7 +208,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MongoDB <i class="val">85%</i></span>
+              <span class="skill">Java <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -224,7 +221,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Neo4J <i class="val">80%</i></span>
+              <span class="skill">MongoDB <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -237,7 +234,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Java<i class="val">80%</i></span>
+              <span class="skill">FastAPI<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -278,7 +275,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Apache Spark <i class="val">70%</i></span>
+              <span class="skill">Docker <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -291,7 +288,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Apache Kafka<i class="val">65%</i></span>
+              <span class="skill">Kubenetes<i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -304,7 +301,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Apache Flink <i class="val">60%</i></span>
+              <span class="skill">Spring Boot<i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -444,8 +441,8 @@
               <h4>Siva Prakash</h4>
               <p>
                 <em
-                  >Data Engineer with 6 months of experience in the IT industry
-                  and over 2 years of tutoring experience</em
+                  >Software Engineer with 1 year of experience in the IT
+                  industry and over 2 years of tutoring experience</em
                 >
               </p>
               <ul>
@@ -478,6 +475,9 @@
             </div>
             <h3 class="resume-title">Certifications</h3>
             <div class="resume-item">
+              <p>Microsoft Fabric Professional - Azure</p>
+            </div>
+            <div class="resume-item">
               <p>
                 Stanford University Machine Learning Specialization - Coursera
               </p>
@@ -487,9 +487,6 @@
             </div>
             <div class="resume-item">
               <p>Neo4J Certified Professional - Neo4J</p>
-            </div>
-            <div class="resume-item">
-              <p>Postman Engineer Roadmap - Postman</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -502,21 +499,24 @@
               <p><em>Atsuya Technologies, Chennai</em></p>
               <ul>
                 <li>
-                  Developing robust APIs and solutions using relevant
-                  programming languages and frameworks, such as Python for
-                  scripting, Java for API development and C++ for application
-                  development.
+                  Developed 20+ RESTful APIs using FastAPI and Spring Boot,
+                  integrating JWT authentication, AWS RDS, and TimescaleDB for
+                  secure, scalable retail and IoT systems.
                 </li>
                 <li>
-                  Integrating with various databases such as PostgreSQL and
-                  TimescaleDB for efficient data storage and retrieval, and
-                  leveraging messaging systems like Apache Kafka for real-time
-                  data processing.
+                  Automated image processing and file generation with C++, shell
+                  scripts, and AWS S3/SQS, reducing manual workload by over 80%
+                  and enhancing efficiency.
                 </li>
                 <li>
-                  Contributing to microservices architecture using technologies
-                  like GraphQL and gRPC for efficient communication and scalable
-                  service development.
+                  Reverse-engineered PRN files into PNG images for printer
+                  compatibility on custom Linux boards and fine-tuned ChatGPT
+                  API to convert POS bill text to structured JSON.
+                </li>
+                <li>
+                  Built an IoT-based gas consumption reporting system with
+                  Spring Boot, SQS, and React/Bootstrap, enabling real-time
+                  analytics and user-friendly dashboards.
                 </li>
               </ul>
             </div>
@@ -972,7 +972,7 @@
               <h3>Social Profiles</h3>
               <div class="social-links">
                 <a
-                  href="https://twitter.com/Prakashdev03"
+                  href="https://x.com/prakashanalyst"
                   class="twitter"
                   target="_blank"
                   ><i class="bi bi-twitter"></i
