Updated services section

--- a/index.html
+++ b/index.html
@@ -583,41 +583,42 @@
     <section id="services" class="services">
       <div class="container">
         <div class="section-title">
-          <h2>Services</h2>
-          <p>My Services</p>
+          <h2>Skills</h2>
+          <p>My Technical Expertise</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4>Data Pipeline Optimization</h4>
+              <div class="icon"><i class="bx bx-code-alt"></i></div>
+              <h4>API Development</h4>
               <p>
-                Enhancing the efficiency and performance of data pipelines by
-                optimizing data processing workflows and resource management.
+                Designing and implementing secure, scalable RESTful APIs using
+                FastAPI and Spring Boot, integrated with JWT authentication and
+                ORM models.
               </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4>Data Quality Management</h4>
+              <div class="icon"><i class="bx bx-cloud"></i></div>
+              <h4>Cloud Migration and Integration</h4>
               <p>
-                Ensuring the accuracy, consistency, and reliability of data
-                through rigorous validation, cleansing, and enrichment
-                processes.
+                Migrating and integrating backend systems with AWS services like
+                S3, SQS, and RDS, ensuring scalable, reliable, and efficient
+                cloud-based solutions.
               </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4>Data Warehousing</h4>
+              <div class="icon"><i class="bx bx-image-alt"></i></div>
+              <h4>Image Processing Automation</h4>
               <p>
-                Designing and implementing scalable data warehousing solutions
-                for efficient storage, retrieval, and analysis of large
-                datasets.
+                Automating image processing workflows using C++ and shell
+                scripts, with S3/SQS integration, reducing manual workload by
+                over 80%.
               </p>
             </div>
           </div>
@@ -626,43 +627,42 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4>ETL Development</h4>
+              <div class="icon"><i class="bx bx-lock-alt"></i></div>
+              <h4>Application Security</h4>
               <p>
-                Building and maintaining Extract, Transform, Load (ETL)
-                processes to facilitate data integration from various sources
-                into unified datasets.
+                Implementing robust authentication and authorization using
+                Spring Security and JWT to ensure secure backend systems and
+                data protection.
               </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4>Data Security</h4>
+              <div class="icon"><i class="bx bx-brain"></i></div>
+              <h4>AI Integration</h4>
               <p>
-                Implementing security measures to protect data from unauthorized
-                access and breaches, ensuring compliance with data protection
-                regulations.
+                Fine-tuning ChatGPT API to develop AI-driven solutions for
+                converting unstructured data into structured JSON, streamlining
+                data workflows.
               </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-link"></i></div>
-              <h4>Big Data Solutions</h4>
+              <div class="icon"><i class="bx bx-window"></i></div>
+              <h4>Frontend Development</h4>
               <p>
-                Designing and developing big data architectures and solutions
-                using technologies like Hadoop and Spark to handle large-scale
-                data processing.
+                Creating user-friendly web interfaces using React and Bootstrap
+                to deliver interactive dashboards and data visualization for
+                end-users.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-
     <!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
